--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -1,7 +1,7 @@
 
 .about {
   align-items: center;
-  background-color: #FFC0CB;
+  background-color: #da5a6f;
   display: flex;
   height: 100vh;
   justify-content: center;
