--- a/src/sections/Contact/MuiStyles.scss
+++ b/src/sections/Contact/MuiStyles.scss
@@ -50,6 +50,6 @@
     }
   }
   
-  .css-11tfndm, .css-1heko1s {
+  .css-1ujsas3, .css-11tfndm, .css-1heko1s {
     color: rgb(255, 255, 255) !important;
   }
