--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -47,13 +47,23 @@
         font-size: 1.3vw
       }
     }
+  }
+
+  &-tech {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
     label {
       color: rgb(255, 255, 255);
       font-size: 1.5rem;
       font-weight: 300;
       transition: .3s;
-      margin-top: 5vw;
+      margin-top: 2vw;
+      margin-bottom: 2vw;
 
       &:hover {
         cursor: pointer;
@@ -68,15 +78,6 @@
         font-size: 1.7vw
       }
     }
-  }
-
-  &-tech {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
 
     h3 {
       font-weight: 500;
