--- a/src/sections/Projects/Projects.scss
+++ b/src/sections/Projects/Projects.scss
@@ -6,14 +6,14 @@
 
   &-home {
     align-items: center;
-    background-color: #1F6C8C;
+    background-color: #0d394d;
     display: flex;
     height: 100%;
     justify-content: center;
     width: 100%;
 
     h2 {
-      font-size: 3vw;
+      font-size: 2vw;
       letter-spacing: 2rem;
       font-weight: 300;
             
@@ -26,6 +26,7 @@
   }
 
   &-project {
+    background-color: rgb(0, 0, 0, .5);
     display: grid;
     grid-template-rows: 50% 50%;   
     margin: 0 auto;
@@ -111,7 +112,7 @@
         width: 100%;
         text-align: center;
         font-size: 3vw;
-        font-weight: 200;
+        font-weight: 300;
 
         @media screen and (min-width: 768px) and (max-width: 1200px) {
           font-weight: 300;
@@ -132,6 +133,7 @@
 
       p { 
         font-size: 1.1rem;
+        font-weight: 300;
         width: 60%;
         text-align: justify;
 
