--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -1,7 +1,7 @@
 
 .about {
   align-items: center;
-  background-color: #333333;
+  background-color: rgba(7, 5, 5, 0.6);
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -37,7 +37,7 @@
     h3 {
       font-weight: 300;
       font-size: 1.5rem;
-      color: rgb(127, 189, 218);
+      color: rgb(223, 226, 57);
 
       @media (max-width: 768px) {
         font-size: 1.2rem;
@@ -58,7 +58,7 @@
     align-items: center;
 
     label {
-      color: rgb(127, 189, 218);
+      color: rgb(200, 202, 87);
       font-size: 1.5rem;
       font-weight: 400;
       transition: .3s;
