--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -20,9 +20,9 @@
     width: 100%;
 
     h2 {
-      color: rgb(255, 255, 255);
+      color:#d6d6d6;
       font-size: 1.5rem;
-      font-weight: 400;
+      font-weight: bold;
 
       @media (max-width: 768px) {
         font-size: 1.3rem;
@@ -37,8 +37,7 @@
     h3 {
       font-weight: 300;
       font-size: 1.5rem;
-      color: rgb(223, 226, 57);
-
+      color: rgb(255, 255, 255);
       @media (max-width: 768px) {
         font-size: 1.2rem;
       }
@@ -58,9 +57,9 @@
     align-items: center;
 
     label {
-      color: rgb(200, 202, 87);
+      color: rgb(255, 255, 255);
       font-size: 1.5rem;
-      font-weight: 400;
+      font-weight: bold;
       transition: .3s;
       margin-top: 2vw;
       margin-bottom: 2vw;
