--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -34,7 +34,6 @@
 
     > ul {
       display: flex;
-      background-color: rgb(29, 29, 29);
       height: 101vh;
       flex-direction: column;
       position: absolute;
@@ -62,10 +61,11 @@
   
   .navdesktop {
     align-items: center;
+    background-color: rgb(0, 0, 0, .7);
     display: flex;
-    height: 10%;
+    justify-content: center;
+    height: 6%;
     position: fixed;
-    justify-content: flex-end;
     width: 100%;
 
     > ul {
@@ -73,13 +73,16 @@
       height: 100%;
       justify-content: space-around;
       margin-right: 10%;
-      width: fit-content;
+      width: 60%;
+      margin: 0 auto;
 
       > li {
         font-size: .9rem;
-        font-weight: 400;
+        font-weight: 300;
+        opacity: .9;
         transition: .3s;
-        margin: 0% 10% 0 10%;
+        padding: 1%;
+        margin: 0% 5% 0 5%;
         white-space: nowrap;
 
         @media (min-width: 2000px) {
@@ -87,7 +90,7 @@
         }
 
         &:hover {
-          color: #b6b6b6;
+          color: #5cc2cf;
         }
       }
     }
