--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -1,12 +1,11 @@
 
 .about {
   align-items: center;
-  background-color: rgba(7, 5, 5, 0.6);
+  background-color: rgba(56, 56, 56, 0.95);
   display: flex;
   height: 100vh;
   justify-content: center;
   width: 100%;
-  color: black;
   min-height: 500px;
 
   &-title {
@@ -20,9 +19,9 @@
     width: 100%;
 
     h2 {
-      color:#d6d6d6;
-      font-size: 1.5rem;
-      font-weight: bold;
+      color:#8bdff8;
+      font-size: 2rem;
+      font-weight: 300;
 
       @media (max-width: 768px) {
         font-size: 1.3rem;
@@ -36,7 +35,7 @@
 
     h3 {
       font-weight: 300;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       color: rgb(255, 255, 255);
       @media (max-width: 768px) {
         font-size: 1.2rem;
@@ -57,9 +56,9 @@
     align-items: center;
 
     label {
-      color: rgb(255, 255, 255);
+      color:#8bdff8;
       font-size: 1.5rem;
-      font-weight: bold;
+      font-weight: 300;
       transition: .3s;
       margin-top: 2vw;
       margin-bottom: 2vw;
@@ -80,8 +79,8 @@
 
     h3 {
       font-weight: 300;
-      font-size: 1.5rem;
-      color: rgba(255, 255, 255);
+      font-size: 1.2rem;
+      color: rgb(202, 202, 202);
       white-space: nowrap;
 
       @media (max-width: 768px) {
