--- a/src/sections/Contact/Contact.scss
+++ b/src/sections/Contact/Contact.scss
@@ -1,5 +1,4 @@
 .contact {
-  background-color: rgb(39, 39, 39);
   display: grid;
   grid-template-columns: 50% 50%;
   height: 100vh;
@@ -48,11 +47,9 @@
   }
 
   &-image {
-    background: url('../../assets/images/jpg/contact2bw.webp');
-    background-position: center;
-    background-size: cover;    
+    background-color: rgb(0, 0, 0, .6);
+    opacity: .96;
     height: 100%;
-    filter: brightness(50%);
     width: 100%;
 
     @media (max-width: 870px) {
@@ -79,9 +76,14 @@ footer {
   }
 
   a {
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
     margin: 0 2% 0 2%;
+
+    &:nth-child(2) {
+      background-color: white;
+      border-radius: 10px;
+    }
 
     @media (min-width: 2000px) {
       height: 1.7vw;
