--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -14,7 +14,8 @@
   h2 {
     text-align: center;
     font-weight: 200;
-    font-size: 3.5rem;
+    letter-spacing: .5rem;
+    font-size: 4.5rem;
     width: 100%;
 
     @media (max-width: 768px) {
@@ -29,6 +30,7 @@
   h3 {
     text-align: center;
     font-size: 1.5rem;
+    letter-spacing: .5rem;
     font-weight: 300;
     width: 100%;
       
