--- a/src/sections/Projects/Projects.scss
+++ b/src/sections/Projects/Projects.scss
@@ -6,14 +6,14 @@
 
   &-home {
     align-items: center;
-    background-color: #0d394d;
+    background-color: rgba(3, 113, 128, 0.8);
     display: flex;
     height: 100%;
     justify-content: center;
     width: 100%;
 
     h2 {
-      font-size: 2vw;
+      font-size: 1.5vw;
       letter-spacing: 2rem;
       font-weight: 300;
             
@@ -31,7 +31,7 @@
     grid-template-rows: 50% 50%;   
     margin: 0 auto;
     height: 100%;
-    width: 100%;
+    width: 70%;
 
     @media (max-width: 400px) {
       display: flex;
@@ -47,42 +47,37 @@
     &__img {
       align-items: center;
       display: flex;
+      overflow: hidden;
+      width: 100%;
       height: 100%;
       justify-content: center;
-      width: 100%;
 
       @media (min-width: 768px) {
         width: 50%;
       }
 
       img {
-        border-radius: 10px;
-        height: 220px;
+        opacity: .8;
 
-        @media (max-width: 320px) {
-          max-width: 180px;
-        }
         @media (max-width: 768px) {
-          max-width: 250px;
+          height: 200px;
+          width: 300px;
+          margin-top: 50px  ;
         }
+
         @media (min-width: 768px) {
           height: 300px;
-          width: 300px;
-        }
-
-        @media (min-width: 1200px) {
-          height: 400px;
           width: 400px;
         }
 
-        @media (min-width: 1500px) {
-          height: 500px;
-          width: 500px;
+        @media (min-width: 2000px) {
+          height: 20vw;
+          width: 30vw;
         }
 
-        @media (min-width: 2000px) {
-          height: 30vw;
-          width: 30vw;
+        @media (max-width: 320px) {
+          height: 150px;
+          width: 250px;
         }
       }
     }
@@ -93,7 +88,6 @@
       justify-content: flex-start;
       flex-direction: column;
       margin: auto auto;
-      color: rgb(255, 255, 255);
       height: 100%;
       width: 100%;
 
@@ -110,6 +104,7 @@
       h2 {
         height: 15%;
         width: 100%;
+        color: rgb(98, 233, 222);
         text-align: center;
         font-size: 3vw;
         font-weight: 300;
@@ -175,9 +170,8 @@
       &-links {
         align-items: center;
         display: flex;
-        margin-top: 3rem;
         justify-content: space-evenly;
-        width: 70%;
+        width: 100%;
       }
     }
   }
