--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,12 @@
 body {
   &:before {
     content: "";
-    background: url('./assets/images/jpg/city.jpg');
+    background: url('./assets/images/jpg/coffe.webp');
     background-position: center;
     background-size: cover;
     background-position-y: 55%;
     height: 100vh;
-    filter: blur(.5px) grayscale(70%) brightness(40%);
+    filter: blur(.5px) grayscale(20%) brightness(40%);
     left: 0;
     position: fixed;
     overflow: hidden;
