--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,8 +1,7 @@
 .nav {
   align-items: center;
   display: flex;
-  height: fit-content;
-  min-height: 50px;
+  height: 10%;
   justify-content: center;
   position: fixed;
   width: 100%;
@@ -13,7 +12,6 @@
     align-items: center;
     display: flex;
     height: 100%;
-    position: relative;
     justify-content: space-around;
     width: 20%;
 
@@ -33,6 +31,7 @@
     z-index: 9999;
 
     > ul {
+      background-color: rgba(25, 120, 163, 0.95);
       display: flex;
       height: 101vh;
       flex-direction: column;
@@ -42,7 +41,7 @@
       width: 100%;
 
       > li {
-        font-size: 1rem;
+        font-size: 1.3rem;
         width: fit-content;
       }
     }
@@ -61,7 +60,6 @@
   
   .navdesktop {
     align-items: center;
-    background-color: rgb(0, 0, 0, .7);
     display: flex;
     justify-content: center;
     height: 6%;
