--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -27,6 +27,10 @@
         font-size: 1.3rem;
       }
 
+      @media (max-width: 400px) {
+        font-size: 1.3rem;
+      }
+
       @media (min-width: 2000px) {
         font-size: 1.7vw
       }
@@ -37,8 +41,13 @@
       font-weight: 300;
       font-size: 1.2rem;
       color: rgb(255, 255, 255);
+      opacity: .8;
       @media (max-width: 768px) {
         font-size: 1.2rem;
+      }
+
+      @media (max-width: 400px) {
+        font-size: .8rem;
       }
 
       @media (min-width: 2000px) {
@@ -72,6 +81,10 @@
         margin-top: 10vw;
       }
 
+      @media (max-width: 400px) {
+        font-size: 1rem;
+      }
+
       @media (min-width: 2000px) {
         font-size: 1.7vw
       }
@@ -85,6 +98,10 @@
 
       @media (max-width: 768px) {
         font-size: 1.2rem;
+      }
+
+      @media (max-width: 400px) {
+        font-size: .9rem;
       }
 
       @media (min-width: 2000px) {
