--- a/src/sections/Projects/Projects.scss
+++ b/src/sections/Projects/Projects.scss
@@ -1,7 +1,6 @@
-
 .projects {
   height: 100vh;
-  display: flex;
+  background-color: rgba(121, 102, 102, 0.3);
   width: 100%;
 
   &-home {
@@ -16,162 +15,157 @@
       font-size: 1.5vw;
       letter-spacing: 2rem;
       font-weight: 300;
-            
-      @media (max-width: 768px) {
-        font-size: 10vw;
-        letter-spacing: 1vw;
+
+      @media (max-width: 900px) {
+        font-size: 5vw;
+        letter-spacing: 4vw;
         font-weight: 300;
       }
     }
   }
 
   &-project {
-    background-color: rgb(0, 0, 0, .5);
-    display: grid;
-    grid-template-rows: 50% 50%;   
-    margin: 0 auto;
-    height: 100%;
-    width: 70%;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 
-    @media (max-width: 400px) {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }  
-
-    @media (min-width: 768px) {
-      display: flex;
+    @media (max-width: 900px) {
+      background-color: rgb(0, 0, 0, 0.4);
     }
 
-    &__img {
-      align-items: center;
-      display: flex;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-      justify-content: center;
+    &__container {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      background-color: rgba(0, 0, 0, 0.3);
+      height: 60%;
+      width: 60%;
 
-      @media (min-width: 768px) {
-        width: 50%;
+      @media (max-width: 900px) {
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        background-color: transparent;
       }
 
-      img {
-        opacity: .8;
+      &-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-        @media (max-width: 768px) {
+        @media (max-width: 900px) {
+          height: 50%;
+        }
+
+        img {
           height: 200px;
           width: 300px;
-          margin-top: 50px  ;
-        }
+          box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 
-        @media (min-width: 768px) {
-          height: 300px;
-          width: 400px;
-        }
+          @media (max-width: 900px) {
+            height: 150px;
+            width: 250px;
+            border-radius: 5px;
+          }
 
-        @media (min-width: 2000px) {
-          height: 20vw;
-          width: 30vw;
-        }
-
-        @media (max-width: 320px) {
-          height: 150px;
-          width: 250px;
-        }
-      }
-    }
-
-    &__description {
-      align-items: center;
-      display: flex;
-      justify-content: flex-start;
-      flex-direction: column;
-      margin: auto auto;
-      height: 100%;
-      width: 100%;
-
-      @media (min-width: 768px) {
-        justify-content: center;
-        height: 70%;
-        width: 50%;
-      }
-
-      @media (min-width: 2000px) {
-        width: 60%;
-      }
-
-      h2 {
-        height: 15%;
-        width: 100%;
-        color: rgb(98, 233, 222);
-        text-align: center;
-        font-size: 3vw;
-        font-weight: 300;
-
-        @media screen and (min-width: 768px) and (max-width: 1200px) {
-          font-weight: 300;
-        }
-        @media (max-width: 768px) {
-          font-size: 5vw;
-          font-weight: 300;
-        }
-        @media (max-width: 400px) {
-          font-size: 7vw;
-          font-weight: 300;
-        }
-        @media (min-width: 2000px) {
-          font-size: 4vw;
-          height: 10vw;
-        }
-      }
-
-      p { 
-        font-size: 1.1rem;
-        font-weight: 300;
-        width: 60%;
-        text-align: justify;
-
-        @media (min-width: 2000px) {
-          font-size: 1vw;
-          width: 40%;
-          height: 15%;
-        }
-      }
-
-      a {
-        height: 30px;
-        width: 30px;
-        z-index: 20;
-
-        @media (min-width: 2000px) {
-          height: 2vw;
-          width: 2vw;
-        }
-
-        :hover {
-          transform: scale(1.1);
-          transition: .2s;
-          cursor: pointer;
-        }
-                
-        img {
-          height: 100%;
-          width: 100%;
-          z-index: 10;
+          @media (min-height: 950px) {
+            height: 300px;
+            width: 400px;
+          }
 
           @media (max-width: 400px) {
-            height: 22px;
-            width: 22px;
+            height: 150px;
+            width: 200px;
+          }
+
+          @media screen and (max-width: 950px) and (min-height: 1300px) {
+            height: 150px;
+            width: 250px;
+          }
+
+          @media screen and (max-width: 1024px) and (max-height: 700px) {
+            height: 150px;
+            width: 250px;
+          }
+
+          @media (min-width: 2500px) {
+            height: 15vw;
+            width: 20vw;
           }
         }
       }
 
-      &-links {
-        align-items: center;
+      &-description {
+        background-color: rgb(0, 0, 0, 0.5);
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
         width: 100%;
+        margin: 0 auto;
+
+        @media (max-width: 900px) {
+          background: transparent;
+        }
+
+        h2,
+        p {
+          width: 60%;
+        }
+
+        h2 {
+          font-weight: 400;
+          @media (min-width: 2500px) {
+            font-size: 2vw;
+          }
+        }
+
+        p {
+          font-weight: 300;
+
+          @media screen and (max-width: 1024px) and (max-height: 700px) {
+            font-size: 1rem;
+          }
+
+          @media (min-width: 2500px) {
+            font-size: 1.2vw;
+          }
+        }
+
+        &__links {
+          display: flex;
+          margin-top: 10%;
+          justify-content: space-around;
+          height: 10%;
+          width: 70%;
+
+          @media (max-width: 900px) {
+            margin-bottom: 5%;
+          }
+
+          a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+              height: 30px;
+              width: 30px;
+
+              @media screen and (max-width: 1024px) and (max-height: 700px) {
+                height: 20px;
+                width: 20px;
+              }
+
+              @media (min-width: 2500px) {
+                height: 2vw;
+                width: 2vw;
+              }
+            }
+          }
+        }
       }
     }
   }
