--- a/src/sections/Contact/Contact.scss
+++ b/src/sections/Contact/Contact.scss
@@ -48,7 +48,7 @@
   }
 
   &-image {
-    background: url('../../assets/images/jpg/astro.jpg');
+    background: url('../../assets/images/jpg/astro.webp');
     background-size: cover;
     background-position: center;
     height: 100%;
