--- a/src/sections/Contact/Contact.scss
+++ b/src/sections/Contact/Contact.scss
@@ -51,8 +51,10 @@
     background: url('../../assets/images/jpg/astro.webp');
     background-size: cover;
     background-position: center;
+    filter: brightness(20%) blur(1px);
     height: 100%;
     width: 100%;
+    opacity: .7;
 
     @media (max-width: 870px) {
       display: none;
