--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -31,7 +31,6 @@
     z-index: 9999;
 
     > ul {
-      background-color: rgba(25, 120, 163, 0.95);
       display: flex;
       height: 101vh;
       flex-direction: column;
@@ -88,7 +87,7 @@
         }
 
         &:hover {
-          color: #5cc2cf;
+          color:#e6d32c;
         }
       }
     }
