--- a/src/sections/Projects/Projects.scss
+++ b/src/sections/Projects/Projects.scss
@@ -103,6 +103,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        text-align: flex-start;
         width: 100%;
         margin: 0 auto;
 
