fix imgs projects

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 body {
   &:before {
     content: "";
-    background: url('./assets/images/jpg/coffe.webp');
+    background: url('./assets/images/bg/coffe.webp');
     background-position: center;
     background-size: cover;
     background-position-y: 55%;
