fix color nav mobile

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -32,6 +32,7 @@
 
     > ul {
       display: flex;
+      background-color: rgba(3, 113, 128, 0.99);
       height: 101vh;
       flex-direction: column;
       position: absolute;
